--- a/.github/workflows/push_ncloud.yml
+++ b/.github/workflows/push_ncloud.yml
@@ -33,7 +33,7 @@ jobs:
         registry: ${{ env.NCR_REGISTRY_PUBLIC }}
         username: ${{ secrets.NCP_ACCESS_KEY_ID }}
         password: ${{ secrets.NCP_SECRET_KEY }}
-        tags: ${{ env.IMAGE_TAG }}
+        tags: "latest,${{ env.IMAGE_TAG }}"
 
     - name: Slack messsae - end
       uses: act10ns/slack@v1
